[tool.poetry]
name = "langsmith-demo"
version = "0.1.0"
description = "A langSmith Demo"
authors = ["Barry Weiss <barweiss@cisco.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.16"
langsmith = "^0.1.45"
langchain-google-genai = "^1.0.2"
langchain-anthropic = "^0.1.8"
langchain-mistralai = "^0.1.2"
langchain-openai = "^0.1.3"
pandas = "^2.2.2"
python-dotenv = "^1.0.1"
ipykernel = "^6.29.4"
jupyter = "^1.0.0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
flake8 = "^7.0.0"
pre-commit = "^3.7.0"
langchain = "^0.1.16"
langsmith = "^0.1.45"
langchain-google-genai = "^1.0.2"
langchain-anthropic = "^0.1.8"
langchain-mistralai = "^0.1.2"
langchain-openai = "^0.1.3"
pandas = "^2.2.2"
python-dotenv = "^1.0.1"
ipykernel = "^6.29.4"
jupyter = "^1.0.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
